--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,12 @@
 <div class="row mt-4">
   <div class="col-3">
     <!-- sidebar    -->
-    sidebar
+    <shared-sidebar></shared-sidebar>
   </div>
 
   <div class="col">
     <!-- nuestras páginas -->
-    router
+
+    <router-outlet></router-outlet>
   </div>
 </div>
