--- a/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -4,8 +4,10 @@
 <div class="row">
   <div class="col">
     <!-- Search box -->
+    <!-- (onValue)="searchByCapital($event)" -->
+
     <shared-search-box
-      (onValue)="searchByCapital($event)"
+      (onDebounce)="searchByCapital($event)"
       placeholder="Buscar por capital"
     ></shared-search-box>
   </div>
@@ -13,7 +15,7 @@
 <div class="row">
   <div class="col">
     <hr />
-    <shared-loading-spinner></shared-loading-spinner>
+    <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
     <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
