--- a/src/app/shared/components/search-box/search-box.component.html
+++ b/src/app/shared/components/search-box/search-box.component.html
@@ -1,7 +1,9 @@
+<!-- (keyup.enter)="emitValue(txtInput.value)"  -->
+
 <input
   type="text"
   [placeholder]="placeholder"
+  (keyup)="onKeyPress(txtInput.value)"
   class="form-control"
-  (keyup.enter)="emitValue(txtInput.value)"
   #txtInput
 />
